# ig_tr

./: Cargo.toml  LICENSE
src/: lib.rs  logic.rs  model.rs  store.rs  tr_service_fs.rs  tr_single_service_fs.rs
src/logic/: tr_director.rs
src/model/: info_table.rs  info_triple.rs
src/store/: triple_facade.rs  triple_store.rs  triple_store_fs.rs
