
[package]
name = "ig_tr"
version = "0.2.0-unstable"
description = "An implementation of info triples."
authors = ["infotriple <contact@infotriple.com>"]
license = "MIT"
edition = "2021"

[features]
#

[dependencies]
bitcoin_hashes = "0.12.0"
delve = { version = "0.3.0", features = ["derive"] }
ig_tools = { version = "0.1.0-unstable", path = "../ig_tools" }

[target.'cfg(windows)'.dependencies]
normpath = "1.1"
